# computational_methods

./: .gitignore  CMakeLists.txt  bisection_method.c  bisection_method.h  euler_method.c  euler_method.h  euler_mod_method.c  euler_mod_method.h  gauss_method.c  gauss_method.h  interpolation_polynomial.c  interpolation_polynomial.h  main.c  main2.c  main3.c  main4.c  main5.c  newton_method.c  newton_method.h  runge_kutta_method.c  runge_kutta_method.h  seidel_method.c  seidel_method.h  simple_iteration_method.c  simple_iteration_method.h  simpson_method.c  simpson_method.h  trap_method.c  trap_method.h  utils.c  utils.h
