cmake_minimum_required(VERSION 3.10)
project(computational_methods C)

set(CMAKE_C_STANDARD 99)

add_library(utils STATIC utils.c utils.h)
add_library(bisection_method STATIC bisection_method.c bisection_method.h)
add_library(simple_iteration_method STATIC simple_iteration_method.c simple_iteration_method.h)
add_library(newton_method STATIC newton_method.c newton_method.h)
add_library(gauss_method STATIC gauss_method.c gauss_method.h)
add_library(seidel_method STATIC seidel_method.c seidel_method.h)
add_library(trap_method STATIC trap_method.c trap_method.h)
add_library(simpson_method STATIC simpson_method.c simpson_method.h)
add_library(interpolation_polynomial STATIC interpolation_polynomial.c interpolation_polynomial.h)
add_library(euler_method STATIC euler_method.c euler_method.h)
add_library(euler_mod_method STATIC euler_mod_method.c euler_mod_method.h)
add_library(runge_kutta_method STATIC runge_kutta_method.c runge_kutta_method.h)

add_executable(task1 main.c)
add_executable(task2 main2.c)
add_executable(task3 main3.c)
add_executable(task4 main4.c)
add_executable(task5 main5.c)
target_link_libraries(task1 m utils bisection_method simple_iteration_method newton_method)
target_link_libraries(seidel_method m)
target_link_libraries(interpolation_polynomial gauss_method m)
target_link_libraries(euler_method m)
target_link_libraries(task2 m gauss_method seidel_method utils)
target_link_libraries(task3 m trap_method simpson_method utils)
target_link_libraries(task4 m interpolation_polynomial utils)
target_link_libraries(task5 m euler_method euler_mod_method runge_kutta_method utils)